improved output, increased magnitude of data gathered